Add API key textarea

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Birthday Friend</title>
-        <script src="./script.js" type="module"></script>
+        <script src="./script.js" type="module" crossorigin="use-credentials"></script>
         <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
         <div id="chat"></div>
+
+        <textarea placeholder="Enter the OpenAI API key"></textarea>
 
         <form>
             <input type="text" placeholder="Type message">
