Add API key textarea

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Birthday Friend</title>
-        <script src="./index.0a251957.js" type="module"></script>
-        <link rel="stylesheet" href="./index.4f8fa002.css">
+        <script src="./index.d7121247.js" type="module" crossorigin="use-credentials"></script>
+        <link rel="stylesheet" href="./index.433fb92d.css">
     </head>
 
     <body>
-        <div id="chat"></div>
+        <div id="chat"></div> <textarea placeholder="Enter the OpenAI API key"></textarea>
         <form> <input type="text" placeholder="Type message"> <input type="submit" value="Send"> </form>
     </body>
 
