Fix font size and alignment

--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Birthday Friend</title>
-        <script src="./index.b449d562.js" type="module" crossorigin="use-credentials"></script>
-        <link rel="stylesheet" href="./index.9ab17fcd.css">
-    </head>
-
-    <body>
-        <div id="chat"></div> <textarea placeholder="Enter the OpenAI API key"></textarea>
-        <form> <input type="text" placeholder="Type message"> <input type="submit" value="Send"> </form>
-    </body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Birthday Friend</title><script src="/index.b449d562.js" type="module" crossorigin="use-credentials"></script><link rel="stylesheet" href="/index.4214f1b5.css"></head><body> <div id="chat"></div> <textarea placeholder="Enter the OpenAI API key"></textarea> <form> <input type="text" placeholder="Type message"> <input type="submit" value="Send"> </form> </body></html>
